# khukri

./: .gitignore  CLAUDE.md  CON  Cargo.toml  LICENSE  README.md
.claude/commands/: extension.md
crates/khukri-bridge/: Cargo.toml  README.md
crates/khukri-bridge/src/: main.rs  media.rs
crates/khukri-bridge/tests/: native_protocol.rs
crates/khukri-engine/: Cargo.toml
crates/khukri-engine/examples/: download.rs
crates/khukri-engine/migrations/: 001_initial.sql  002_add_priority.sql  003_add_failure_reason.sql  004_add_throttle_bytes_per_sec.sql  005_add_segment_downloaded_bytes.sql  006_drop_segment_downloaded_bytes.sql  007_add_segment_formula_version.sql  008_add_media_request_metadata.sql  009_restore_segment_downloaded_bytes.sql
crates/khukri-engine/src/: config.rs  error.rs  lib.rs
crates/khukri-engine/src/db/: mod.rs
crates/khukri-engine/src/engine/: download.rs  mod.rs  prealloc.rs  queue.rs  retry.rs  segment.rs  throttle.rs
crates/khukri-engine/tests/: integration.rs
docs/: adr-001-ytdlp-update-strategy.md  code-review-sprint3.md  extension-architecture.md  external-review-sprint3.md  integration-hardening.md  khukri-jira-tickets.md  khukri-prd.md  packaging-strategy.md  review-fixes.md  sprint-2-status.md  sprint-3-status.md  sprint-4-status.md
docs/adr/: 001-native-messaging-vs-websockets.md  002-stream-watchdog-timeout-policy.md
extension/: README.md  blade-ui.js  com.khukri.host.json  content-script-main.js  content-script.js  manifest.json  prompt.html  prompt.js  register-host.md  register-host.ps1  register-host.sh  service-worker.js
i18n/: en.json
sidecar/: README.md  fetch-ffmpeg.sh  ffmpeg.version  yt-dlp.sha256
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: bootstrap.rs  main.rs  media.rs  ytdlp_updater.rs
src/i18n/: en.json
