[package]
name = "khukri-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
khukri-engine = { path = "../khukri-engine" }
tokio = { version = "1", features = ["full"] }
sqlx = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
tracing-subscriber = "0.3"

[dev-dependencies]
axum = "0.8"
sha2 = "0.10"
